--- a/app/src/main/res/layout/activity_two_player.xml
+++ b/app/src/main/res/layout/activity_two_player.xml
@@ -9,6 +9,16 @@
         android:layout_weight="3"
         android:background="@android:color/black">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="text"
+            android:textColor="@android:color/white"
+            android:textSize="50dp"
+            android:id="@+id/fade_txt"
+            android:visibility="invisible"/>
+
 
     </FrameLayout>
 
@@ -16,7 +26,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:id="@+id/buffer_fragment_i">
+        android:id="@+id/buffer_fragment_i"
+        android:background="@android:color/black">
 
 
     </FrameLayout>
