--- a/app/src/main/res/layout/activity_two_player.xml
+++ b/app/src/main/res/layout/activity_two_player.xml
@@ -19,6 +19,14 @@
             android:id="@+id/fade_txt"
             android:visibility="invisible"/>
 
+        <TextView
+            android:id="@+id/answer_for_inet_game"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:textColor="@android:color/white"
+            android:text="num"/>
+
 
     </FrameLayout>
 
